# 5LIU0_BalanceRobot

./: .gitignore  Dockerfile  FBD_Robot.drawio  LQR_Control.m  README.md  RobotDynamics.asv  RobotDynamics.m  bashrc  entrypoint.sh
Gazebo/balance_robot/: balance_robot_model.sdf  model.config
Gazebo/balance_robot/meshes/: BasePlate.dae  StepperBaseColor.dae  StepperBaseV1Color.dae  TipOverStop.dae  TipOverStopColor.dae  TopPlateColor.dae
balanceRobot_ws/: balanceRobot.urdf  balanceRobot.urdf.xacro
balanceRobot_ws/install/: local_setup.sh  setup.sh
balanceRobot_ws/install/balance_robot/share/balance_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
balanceRobot_ws/install/balance_robot/share/balance_robot/cmake/: balance_robotConfig.cmake
balanceRobot_ws/log/: latest_build
balanceRobot_ws/src/balance_robot/: CMakeLists.txt  package.xml
balanceRobot_ws/src/balance_robot/config/: controller.yaml  rvizView_config.rviz
balanceRobot_ws/src/balance_robot/launch/: launch_sim.launch.py  rsp.launch.py  rsp.launchV1.py  rsp_sim.launch.py  simulator.launch.py
balanceRobot_ws/src/balance_robot/meshes/: PowerBank.dae  PowerBankColor.dae  TopPlate.dae  Wheel.dae  WheelColor.dae
balanceRobot_ws/src/balance_robot/robot_description/: IMU_sensor.xacro  balanceRobot.urdf.xacro  balance_robot.urdf.xacro  balance_robot_core.xacro  gazebo_control.xacro  ros2_control.xacro
balanceRobot_ws/src/balance_robot/robot_description/meshes/: BasePlate.dae  StepperBase.dae
balanceRobot_ws/src/balance_robot/src/: imu_sub.cpp
balanceRobot_ws/src/balance_robot_controller/: package.xml  setup.cfg  setup.py
balanceRobot_ws/src/balance_robot_controller/balance_robot_controller/: imu_sub.py
balance_robot_arduino/: platformio.ini
balance_robot_arduino/src/: main.cpp
xbox_cont_pkg/: CMakeLists.txt
xbox_cont_pkg/src/: main.cpp
